# FMC-Beta

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/client/: commands.json
assets/client/audio/: ATTRIBUTIONS.md
assets/client/blocks/: air.json  coal_ore.json  crafting_table.json  default_block.json  dirt.json  grass.json  leaves.json  oak.json  oak_planks.json  sand.json  soil.json  stone.json  torch.json  wheat_0.json  wheat_1.json  wheat_2.json  wheat_3.json  wheat_4.json  wheat_5.json  wheat_6.json  wheat_7.json
assets/client/blocks/water/: diagonal_water_1.json  diagonal_water_2.json  diagonal_water_3.json  diagonal_water_4.json  diagonal_water_5.json  diagonal_water_6.json  diagonal_water_7.json  diagonal_water_corner_down_1.json  diagonal_water_corner_down_2.json  diagonal_water_corner_down_3.json  diagonal_water_corner_down_4.json  diagonal_water_corner_down_5.json  diagonal_water_corner_down_6.json  diagonal_water_corner_down_7.json  diagonal_water_corner_down_8.json  diagonal_water_corner_up_1.json  diagonal_water_corner_up_2.json  diagonal_water_corner_up_3.json  diagonal_water_corner_up_4.json  diagonal_water_corner_up_5.json  diagonal_water_corner_up_6.json  diagonal_water_corner_up_7.json  diagonal_water_corner_up_8.json  still_water_1.json  still_water_10.json  still_water_2.json  still_water_3.json  still_water_4.json  still_water_5.json  (+22 more)
assets/client/interfaces/: chat.json  death.json  hotbar.json
assets/client/materials/: leaves.json  water.json
assets/client/plugins/: creative.wasm  movement.wasm
crates/creative/: Cargo.toml
crates/creative/src/: lib.rs
crates/movement/: Cargo.toml
crates/movement/src/: lib.rs
resources/client/blocks/: air.json  stone.json  wheat_0.json  wheat_5.json  wheat_6.json  wheat_7.json
src/: assets.rs  chat.rs  lib.rs  main.rs  settings.rs  skybox.rs
src/items/: bread.rs  dropped_items.rs  ground_items.rs  hoes.rs  mod.rs  seeds.rs
src/items/crafting/: mod.rs  shaped.rs
src/mobs/: duck.rs  pathfinding.rs
src/players/: hand.rs  health.rs  hotbar.rs  inventory_interface.rs  mod.rs
src/world/: biomes.rs  mod.rs  terrain_generation.rs
src/world/blocks/: crafting_table.rs  mod.rs  torch.rs  water.rs  wheat.rs
(+22 files in other folders)
